# AIMLPROJECT

./: README.md  pyproject.toml  requirements.txt
configs/: default.yaml
docs/: architecture.md  validation_report.md
outputs/: validation_results.json
outputs/demo/: diarization.json  timeline.html
outputs/demo_diar_asr/: timeline.html  timeline.json
outputs/demo_frontend/: timeline.html  timeline.json
outputs/demo_frontend2/: timeline.html
outputs/demo_frontend3/: diarization.json  timeline.html
outputs/demo_separation/: timeline.html
outputs/hanuman_validation/: diarization.json  speakers_metadata.json  timeline.html  timeline.json  validation_results.json
outputs/pipeline_test/: diarization.json  timeline.html  timeline.json
outputs/run_1min_config/: timeline.html
outputs/validation_test1/: timeline.html
outputs/validation_test2/: timeline.html
src/unified_pipeline/: __init__.py  core_types.py  pipeline.py
src/unified_pipeline/api/: app.py  streaming.py
src/unified_pipeline/asr/: transcriber.py
src/unified_pipeline/audio_io/: ingest.py
src/unified_pipeline/cli/: batch.py
src/unified_pipeline/config/: settings.py
src/unified_pipeline/diarization/: diarizer.py
src/unified_pipeline/postprocessing/: formatter.py
src/unified_pipeline/preprocessing/: pipeline.py
src/unified_pipeline/separation/: embedding.py  separator.py  target_selector.py
src/unified_pipeline/utils/: audio.py  logging.py
src/unified_pipeline/visualization/: export.py  timeline.py
tests/: test_pipeline.py  test_visualization.py  validate_hanuman.py  validate_pipeline.py
